force-app/main/default/objects/Time_Entry__c/Time_Entry__c.object-meta.xml
<CustomObject>
    <label>Time Entry</label>
    <nameField>
        <displayFormat>TE-{0000}</displayFormat>
        <label>Time Entry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Entry</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>