force-app/main/default/objects/Time_Entry__c/fields/Employee_Name_E__c.field-meta.xml
<CustomField>
    <fullName>Employee_Name_E__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Name</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>Time Entries</relationshipLabel>
    <relationshipName>Time_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>