force-app/main/default/objects/Time_Entry__c/fields/In_Time__c.field-meta.xml
<CustomField>
    <fullName>In_Time__c</fullName>
    <label>In Time</label>
    <type>Time</type>
</CustomField>