force-app/main/default/objects/Time_Entry__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( Total_Hours__c  &gt;= 8,&quot;Present&quot;,  IF( Total_Hours__c =4, &quot;Half Day&quot;, &quot;Absent&quot;) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>