force-app/main/default/objects/Time_Entry__c/validationRules/No_Future_Time_Entry.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Future_Time_Entry</fullName>
    <active>true</active>
    <description>Time entry date should not be a future date</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Date__c )),
   Date__c  &gt; TODAY()
)</errorConditionFormula>
    <errorMessage>Time entry date should not be a future date</errorMessage>
</ValidationRule>