force-app/main/default/objects/Time_Entry__c/validationRules/OutTimeShouldGreaterInTime.validationRule-meta.xml
<ValidationRule>
    <fullName>OutTimeShouldGreaterInTime</fullName>
    <active>true</active>
    <description>Out time should be greater than In time and In time should be

less than Out time.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(In_Time__c)),
  NOT(ISBLANK(Out_Time__c)),
  Out_Time__c &lt;= In_Time__c
)</errorConditionFormula>
    <errorMessage>&quot;Out Time must be later than In Time</errorMessage>
</ValidationRule>