force-app/main/default/objects/Time_Entry__c/validationRules/Time_Entry_Not_Allowed_In_Weekend.validationRule-meta.xml
<ValidationRule>
    <fullName>Time_Entry_Not_Allowed_In_Weekend</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   WEEKDAY(Date__c) = 1, 
   WEEKDAY(Date__c) = 7   
)</errorConditionFormula>
    <errorMessage>Time entry is not allowed on Saturday or Sunday.</errorMessage>
</ValidationRule>