force-app/main/default/objects/Time_Entry__c/listViews/This_Month_Time_Entries.listView-meta.xml
<ListView>
    <fullName>This_Month_Time_Entries</fullName>
    <columns>NAME</columns>
    <columns>Employee_Name_E__c</columns>
    <columns>In_Time__c</columns>
    <columns>Out_Time__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>This Month Time Entries</label>
</ListView>